--- a/styles/school.css
+++ b/styles/school.css
@@ -1,62 +1,94 @@
 @font-face {
-	font-family: D-DIN;
-	src: url('../assets/fonts/D-DIN.ttf') format("truetype");
-}
-
-@keyframes gradient {
-	0% {
-		background-position: 0% 50%;
-	}
-	100% {
-		background-position: 100% 50%;
-	}
-}
-
-@keyframes fadein{
-    0%{opacity:0;visibility:visible;}
-    100%{opacity:1;}
-}
-.fadein {
-    animation: fadein 1s;
-}
-
-html {
-	overflow: hidden;
+	font-family: poppins;
+	src: url('../assets/fonts/Poppins-SemiBold.ttf') format("truetype");
 }
 
 body {
-	background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab, #221e22, #141b25, #141b25);
-	background-size: 400% 400%;
+	background: linear-gradient(#141b25, #221e22);
+}
+/*
+#container {
+	width: 500px;
+	height: 500px;
+	margin: 40px auto;
+	border: 1px solid #000;
+	display:grid;
+	grid-template-columns:30px;
+	grid-template-rows:30px;
+	place-content: center;
+	border-radius: 50%;
+}
+#container:hover .item {
+	-webkit-animation-play-state:paused;
+	-moz-animation-play-state:paused;
+	-o-animation-play-state:paused;
+	animation-play-state:paused;
+	cursor: pointer;
+}
+.item {
+	grid-area:1/1;
+	line-height: 30px;
+	text-align: center;
+	border-radius: 50%;
+	background: #f00;
+	animation: spin 12s var(--d,0s) linear infinite
+	transform:rotate(0) translate(200%) rotate(0);
+}
 
+@keyframes spin {
+	100% {
+		transform:rotate(1turn) translate(200%) rotate(-1turn);
+	}
+}
+*/
+
+.notes-container-main {
+	display: grid;
+	grid-template-columns: 1fr 1fr;
+	margin: 5%;
+	color: white;
 }
 
 .notes-container {
-	margin: 3%;
-	padding-top: 3%;
-	opacity: 0;
+	display: grid;
+	grid-template-rows: 1fr 1fr 1fr;
+	grid-template-columns: 1fr 1fr 1fr;
+	margin: 4vw;
+	
 }
 
 .note {
-	margin: auto;
-	margin-top: 1%;
-	width: 30%;
-	color: white;
-	font-family: D-DIN;
-	border: 1px solid white;
-	padding: 0.5rem;
-	transition-duration: .3s;
+	aspect-ratio: 1/1;
+	display: flex; 
+    align-items: center; 
+    justify-content: center;
+	font-family: poppins;
+	font-size: 2vw;
+	border: 5px solid white;
+	margin: 1vw 2vw 1vw 2vw;
+	padding: 5%;
+	position: relative;
 }
 
 .note:hover {
-	background-color: white;
+	cursor: pointer;
 }
 
-.note a {
-	color: white;
-	text-decoration: none;
+.note::before {
+	content: "";
+	display: block;
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	transition: all 1s;
+	z-index: -1;
+	border: 5px solid white;
+	transform: scale(1.2);
 }
 
-.note:hover a {
-	color: black;
+.note:hover::before {
+  transform: translate(-5%, -5%);
 }
 
