--- a/styles/contact.css
+++ b/styles/contact.css
@@ -8,21 +8,98 @@
 	src: url('../assets/fonts/Poppins-SemiBold.ttf') format("truetype");
 }
 
+@keyframes gradient {
+	0% {
+		background-position: 0% 50%;
+	}
+	50% {
+		background-position: 100% 50%;
+	}
+	100% {
+		background-position: 0% 50%;
+	}
+}
+
 body {
 	background: linear-gradient(#141b25, #221e22);
 }
 
-.main-container {
-	margin: 20%;
-	margin-top: 5%;
-	padding: 2%;
-	background-color: #11151c;
-	color: white;
-	font-family: D-DIN;
+.blur {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	backdrop-filter: blur(5px);
 }
 
-.title {
+#main-container {
+	margin: 20%;
+	margin-top: 5%;
+	padding: 5%;
+	color: white;
+	font-family: D-DIN;
+	background-image: linear-gradient(-45deg, #23a6d5, #23d5ab);
+	/*background-size: 300% 300%;
+	animation: gradient 15s ease infinite;*/
+	
+	box-shadow: 0px 0px 30px 20px rgba(0, 0, 0, 0.4);
+	border-radius: 10px;
+	padding-bottom: 2%;
+}
+
+#input-area {
+	margin-top: 5%;
+	display: flex;
+	flex-direction: row;
+	justify-content: center;
+}
+
+.input-text {
+	padding: 2%;
+	border-radius: 10px;
+	outline: none;
+	border: none;
+	width: 40%;
+	transition-duration: .3s;
+}
+
+.input-text:focus {
+	filter: drop-shadow(0px 0px 5px #fff);
+}
+
+#next-container {
+	margin-top: 7%;
+	display: grid;
+  	place-items: center;
+}
+
+#next {
+	font-family: monospace;
+	font-size: 200%;
+	background-color: #23bbc3;
+	outline: none;
+	border: none;
+	border-radius: 3px;
+	padding: 1%;
+	width: 3vw;
+	height: 3vw;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	color: #ededed;
+	transition-duration: .4s;
+}
+
+#next:hover {
+	background-color: #ededed;
+	color: #23bbc3;
+}
+
+#title {
 	font-family: poppins;
+	font-size: 200%;
+	text-align: center;
 }
 
 .send {
