--- a/styles/school.css
+++ b/styles/school.css
@@ -30,7 +30,7 @@ body {
 	width: 10vw;
 	height: 10vw;
 	border: 5px solid white;
-	
+	text-decoration: none;
 	position: relative;
 	
 	background-color: #f3b1cd;
