--- a/styles/contact.css
+++ b/styles/contact.css
@@ -68,16 +68,44 @@ body {
 	filter: drop-shadow(0px 0px 5px #fff);
 }
 
-#next-container {
-	margin-top: 7%;
+.send-container {
 	display: grid;
-  	place-items: center;
+	place-items: center;
 }
 
-#next {
+#send {
+	font-family: poppins;
+	outline: none;
+	border: none;
+	padding: 10%;
+	font-size: 250%;
+	border-radius: 15px;
+	filter: drop-shadow(0px 15px 0px #cccccc);
+	transition-duration: .5s;
+	width: 150%;
+}
+
+#send:hover {
+	transform: translateY(5px);
+	filter: drop-shadow(0px 10px 0px #cccccc);
+}
+
+#send:focus {
+	transform: translateY(10px);
+	filter: drop-shadow(0px 5px 0px #cccccc);
+}
+
+.buttons-container {
+	margin-top: 7%;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+.button {
 	font-family: monospace;
 	font-size: 200%;
-	background-color: #23bbc3;
+	background-color: transparent;
 	outline: none;
 	border: none;
 	border-radius: 3px;
@@ -89,11 +117,13 @@ body {
 	align-items: center;
 	color: #ededed;
 	transition-duration: .4s;
+	user-select: none;
 }
 
-#next:hover {
+.button:hover {
 	background-color: #ededed;
 	color: #23bbc3;
+	cursor: pointer;
 }
 
 #title {
@@ -102,18 +132,12 @@ body {
 	text-align: center;
 }
 
-.send {
-	font-family: D-DIN;
-	width: 10%;
-	background-color: white;
-	outline: none;
-	border: none;
-	font-size: 120%;
-	padding: 1%;
-	border-radius: 5px;
-	transition-duration: .3s;
+.disable {
+	color: rgba(255,255,255,0.5);
 }
 
-.send:hover {
-	background-color: lightgray;
+.disable:hover {
+	background-color: transparent;
+	cursor: auto;
+	color: rgba(255,255,255,0.5);
 }
