--- a/styles/experience.css
+++ b/styles/experience.css
@@ -56,11 +56,41 @@ body {
 .image-container {
 	width: 50%;
 	overflow: hidden;
+	position: relative;
 }
 
 #photo {
 	width: 100%;
-	clip-path: circle(50%);
-	filter: drop-shadow(0px 0px 10px #ffffff);
+	clip-path: circle(40%);
+}
 
+.outline-container {
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	top: 0;
+	left: 0;
+}
+
+.outline-1 {
+	clip-path: circle(46%);
+	background-color: white;
+	transition-duration: .3s;
+}
+.outline-2 {
+	clip-path: circle(45%);
+	background-color: #191c23;
+}
+.image-container:hover .outline-1 {
+	clip-path: circle(48%);
+}
+
+.description-section {
+	font-family: poppins;
+	color: white;
+	text-align: center;
+}
+
+.description-title {
+	font-size: 200%;
 }
